compiler-core/src/parse/snapshots/gleam_core__parse__tests__deeply_nested_tuples.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nlet tup = #(#(#(#(4))))\n{{{tup.0}.0}.0}.0\n"
snapshot_kind: text
---
[
    Assignment(
        Assignment {
            location: SrcSpan {
                start: 1,
                end: 24,
            },
            value: Tuple {
                location: SrcSpan {
                    start: 11,
                    end: 24,
                },
                elems: [
                    Tuple {
                        location: SrcSpan {
                            start: 13,
                            end: 23,
                        },
                        elems: [
                            Tuple {
                                location: SrcSpan {
                                    start: 15,
                                    end: 22,
                                },
                                elems: [
                                    Tuple {
                                        location: SrcSpan {
                                            start: 17,
                                            end: 21,
                                        },
                                        elems: [
                                            Int {
                                                location: SrcSpan {
                                                    start: 19,
                                                    end: 20,
                                                },
                                                value: "4",
                                                int_value: 4,
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
            pattern: Variable {
                location: SrcSpan {
                    start: 5,
                    end: 8,
                },
                name: "tup",
                type_: (),
                origin: Variable(
                    "tup",
                ),
            },
            kind: Let,
            annotation: None,
        },
    ),
    Expression(
        TupleIndex {
            location: SrcSpan {
                start: 25,
                end: 42,
            },
            index: 0,
            tuple: Block {
                location: SrcSpan {
                    start: 25,
                    end: 40,
                },
                statements: [
                    Expression(
                        TupleIndex {
                            location: SrcSpan {
                                start: 26,
                                end: 39,
                            },
                            index: 0,
                            tuple: Block {
                                location: SrcSpan {
                                    start: 26,
                                    end: 37,
                                },
                                statements: [
                                    Expression(
                                        TupleIndex {
                                            location: SrcSpan {
                                                start: 27,
                                                end: 36,
                                            },
                                            index: 0,
                                            tuple: Block {
                                                location: SrcSpan {
                                                    start: 27,
                                                    end: 34,
                                                },
                                                statements: [
                                                    Expression(
                                                        TupleIndex {
                                                            location: SrcSpan {
                                                                start: 28,
                                                                end: 33,
                                                            },
                                                            index: 0,
                                                            tuple: Var {
                                                                location: SrcSpan {
                                                                    start: 28,
                                                                    end: 31,
                                                                },
                                                                name: "tup",
                                                            },
                                                        },
                                                    ),
                                                ],
                                            },
                                        },
                                    ),
                                ],
                            },
                        },
                    ),
                ],
            },
        },
    ),
]
